# ihm2

./: .gitignore  .gitmodules  LICENSE.md  README.md  build.sh  constants.py  create_track_file.py  env.yml  generate.py  generate_acaods_interface.py  generate_track_file.py  main.py  model.py  pyrightconfig.json  tmux.sh  utils.py
data/: fsds_competition_2.csv
data/acceleration/: center_line.csv  cones.csv
data/fsds_competition_1/: center_line.csv  cones.csv
data/fsds_competition_2/: center_line.csv  cones.csv
data/fsds_competition_3/: center_line.csv  cones.csv
data/fsds_default/: center_line.csv  cones.csv
data/short_skidpad/: center_line.csv
data/skidpad/: center_line.csv  cones.csv
doc/: dpc.typ  model.typ
dpc/: .gitignore  main.py  requirements.txt
new_python/: closed_loop_sim.py  controller.py  simulator.py  track_data.py
old/: utils.py
old/scripts/: gen_mpc.py  gen_sim.py  gen_track_file.py
python/: bruh.py  constants.py  generate_all.py  ihm1point5_mpc.py  main.py  models.py  motion_planning.py  mpc.py  new.py  sim.py  utils.py
scripts/: build.sh  gen_mpc.py  gen_sim.py  gen_track_file.py  purge.sh  tmux.sh
src/ihm2/: CMakeLists.txt  package.xml
src/ihm2/include/ihm2/common/: cone_color.hpp  marker_color.hpp  math.hpp  track.hpp  track_database.hpp  tracks.hpp
src/ihm2/launch/: sim.launch.py  stanley.launch.py
src/ihm2/meshes/: ariane.stl  ariane_wheel.stl  cone.stl  gotthard_wheel.stl  lego-lrt4.stl
src/ihm2/msg/: CarState.msg  ConesObservations.msg  Controls.msg  State.msg
src/ihm2/src/: control_node.cpp  mpc_control_node.cpp  sim_node.cpp  sim_node_dyn10.cpp  stanley_control_node.cpp
src/ihm2/src/common/: cone_color.cpp  marker_color.cpp  math.cpp  track.cpp  track_database.cpp  tracks.cpp
src/ihm2_python/: package.xml  setup.cfg  setup.py
src/ihm2_python/ihm2_python/: mesh_publisher.py
templates/: .gitignore  env.yml  ihm2_foxglove.json
