<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ihm2_python</name>
  <version>0.0.0</version>
  <maintainer email="oancea.tudor@icloud.com">tudoroancea</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>pendulum_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>shape_msgs</depend>
  <depend>statistics_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>brains_custom_interfaces</depend>
  <depend>foxglove_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
